load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix hotel-amir
gazelle(name = "gazelle")

go_library(
    name = "hotel-amir_lib",
    srcs = ["main.go"],
    importpath = "hotel-amir",
    visibility = ["//visibility:private"],
    deps = [
        "//api",
        "@com_github_gofiber_fiber_v2//:go_default_library",
    ],
)

go_binary(
    name = "hotel-amir",
    embed = [":hotel-amir_lib"],
    visibility = ["//visibility:public"],
)
