load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix hotel-amir
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "hotel-amir_lib",
    srcs = ["main.go"],
    importpath = "hotel-amir",
    visibility = ["//visibility:private"],
    deps = [
        "//api",
        "//db",
        "@com_github_gofiber_fiber_v2//:fiber",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_binary(
    name = "hotel-amir",
    embed = [":hotel-amir_lib"],
    visibility = ["//visibility:public"],
)
