load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "db.go",
        "user_store.go",
    ],
    importpath = "hotel-amir/db",
    visibility = ["//visibility:public"],
    deps = [
        "//types",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//bson/primitive",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)
